# WhirlTube

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AUR_PACKAGING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bugs_report.txt  build1.sha  build2.sha  code_snapshot.txt  code_snapshot_full.txt  create_full_snapshot.sh  create_snapshot.sh  currentlm.txt  important_code_snapshot.txt  important_files_snapshot.sh  mpv-json-ipc-doc.txt  mypy.ini  projectrules.txt  pyproject.toml  python-mpv-docs.md  ruff.toml  sponsorblock-api-docs.txt  test_embedded_fixes.py  whirltube-fixes-10.patch  whirltube-fixes-11.patch  whirltube-fixes-12.patch  whirltube-fixes-13.patch  whirltube-fixes-14.patch  whirltube-fixes-2.patch  whirltube-fixes-3.patch  whirltube-fixes-4.patch  whirltube-fixes-5.patch  whirltube-fixes-6.patch  whirltube-fixes-7.patch  whirltube-fixes-8.patch  (+4 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
data/: org.whirltube.WhirlTube.desktop  org.whirltube.WhirlTube.metainfo.xml  org.whirltube.Whirltube.desktop
flatpak/: org.whirltube.WhirlTube.yml
scripts/: build_and_verify.sh  build_zipapp.sh  build_zipapp_systemdeps.sh  clean_project.sh  deep_verify.sh  doctor.sh  tripwire_check.sh  verify_build.sh
src/whirltube/: __init__.py  __main__.py  app.py  dialogs.py  download_manager.py  downloader.py  history.py  invidious_auth.py  invidious_provider.py  logging_config.py  metrics.py  models.py  mpv_embed.py  mpv_gl.py  navigation_controller.py  player.py  provider.py  quick_quality.py  quickdownload.py  subscription_feed.py  subscriptions.py  thumbnail_cache.py  util.py  watch_later.py  window.py  ytdlp_runner.py
src/whirltube/providers/: __init__.py  base.py  hybrid.py  innertube_web.py  invidious.py  newpipe.py  ytdlp.py  ytextractor_provider.py
src/whirltube/services/: mpv_launcher.py  native_resolver.py  playback.py
src/whirltube/ui/controllers/: browse.py  search.py
src/whirltube/ui/widgets/: mpv_controls.py  result_row.py
tests/: conftest.py  test_dialogs.py  test_models.py  test_native_resolver_proxy.py  test_parse_line.py  test_providers.py  test_quick_args.py  test_quickdownload.py  test_runner_state.py  test_search_filters.py  test_services.py  test_smoke.py  test_util.py  test_utils_proxy.py  test_utils_youtube_url.py  test_ytdlp_proxy.py  test_ytdlp_runner.py
whirltube/: whirltube-0.4.5-1-any.pkg.tar.zst
whirltube-git/: .SRCINFO  PKGBUILD  whirltube-git-0.4.7.0.gf8716d9-1-any.pkg.tar.zst
whirltube-git/WhirlTube/: FETCH_HEAD  config  packed-refs
whirltube-git/WhirlTube/objects/pack/: pack-93ec0dbeb64cc1b524c3bf24a3c1ca039fd90cb0.idx  pack-93ec0dbeb64cc1b524c3bf24a3c1ca039fd90cb0.pack  pack-93ec0dbeb64cc1b524c3bf24a3c1ca039fd90cb0.rev
whirltube-git/WhirlTube/refs/heads/: makepkg
whirltube-git/pkg/whirltube-git/: .BUILDINFO  .MTREE  .PKGINFO
whirltube/pkg/whirltube/: .BUILDINFO  .MTREE  .PKGINFO
whirltube/src/WhirlTube-0.4.5.r50.g86fbc88/: .SRCINFO  PKGBUILD
(+1 files in other folders)
