[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "whirltube"
version = "0.5.1"
description = "Wayland-first GTK4 YouTube client with MPV playback and multi-provider backends"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "WhirlTube contributors" },
]
maintainers = [
    { name = "tazdev-ops", email = "tazdev-ops@github.com" },
]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio",
]
keywords = ["youtube", "gtk4", "mpv", "video-player", "wayland", "media-player"]
dependencies = [
  "httpx>=0.27",
  "yt-dlp>=2024.8.6",
  "keyring>=24.0",
  "secretstorage>=3.3; sys_platform=='linux'",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.9",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=5.0",
]
embed = [
  "python-mpv>=1.0.6",
]

[project.scripts]
whirltube = "whirltube.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/whirltube"]
include = [
  "src/whirltube/assets/**",
  "data/**",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/**",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
  "pyproject.toml",
  "mypy.ini",
  "ruff.toml",
  "tests/**",
  "data/**",
  "flatpak/**",
]

[tool.ruff]
line-length = 100
target-version = "py312"
lint.select = ["E","F","W","I","UP","B","SIM","C90"]
lint.ignore = ["E203","E501"]
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
